[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/art/shoot_bar.png" type="Texture" id=3]
[ext_resource path="res://Assets/art/hurt_frame.png" type="Texture" id=4]
[ext_resource path="res://Assets/art/cooldown_bar.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.4153, 29.7489 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 28 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 10 )

[sub_resource type="RectangleShape2D" id=5]

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 486.206, 303.509 )
scale = Vector2( 0.4, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
MAX_SPEED = 9
JUMP_FORCE = 30

[node name="AmmoTimer" type="Timer" parent="."]

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CrushTimer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0808105, -30.7761 )
frames = SubResource( 1 )

[node name="Physics" type="CollisionShape2D" parent="."]
position = Vector2( -0.241208, -30.5826 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.35, 0.35 )
limit_left = 0
limit_top = 0
limit_right = 1024
limit_bottom = 600
smoothing_enabled = true

[node name="ShootBar" type="Sprite" parent="."]
visible = false
position = Vector2( -0.652344, -71.5479 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )

[node name="CooldownBar" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.984314, 0, 1 )
self_modulate = Color( 0.992157, 1, 0, 1 )
position = Vector2( -0.390625, -71.5479 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
collision_layer = 0
collision_mask = 4
input_pickable = false

[node name="HurtBox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.390625, -28.3947 )
shape = SubResource( 3 )

[node name="BounceBox" type="Area2D" parent="."]
modulate = Color( 0.242188, 1, 0, 1 )
self_modulate = Color( 0.168627, 0.803922, 0.0117647, 1 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceBox"]
position = Vector2( -0.127808, -9.69421 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 4 )

[node name="CrushBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrushBox"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( -0.606934, -26.7652 )
scale = Vector2( 2, 2 )
shape = SubResource( 5 )
disabled = true

[connection signal="timeout" from="AmmoTimer" to="." method="_on_AmmoTimer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="timeout" from="CrushTimer" to="." method="_on_CrushTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="BounceBox" to="." method="_on_BounceBox_area_entered"]
[connection signal="body_entered" from="CrushBox" to="." method="_on_CrushBox_body_entered"]
